# speterlin-stocks

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example.py
speterlin_stocks/: __init__.py  module1.py
stocks/: __init__.py  module1.py
