[project]
name = "speterlin-stocks"
version = "0.1.4"
description = "A Python package for a suite of quant-trading opportunities in stocks with API integration: Alpaca brokerage for storing USD assets and margin trading (2x) on exchanges NYSE & NASDAQ, Financial Modeling Prep (FMP) & Yahoo Finance & Google Finance & ExchangeRate & MarketBeat & CrunchBase for data collection, OpenAI & Google Gemini-Pro for AI analysis"
authors = [
  { name = "Sebastian Peterlin", email = "speterlin@smartxchange.xyz" },
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "requests>=2.20",
    "numpy",
    "pandas>=2.0",
    "datetime",
    "yfinance",
    "beautifulsoup4", # bs4
    "pytrends",
    "openai", # ~
    "langchain-openai",
    "google-generativeai",
    "unidecode",
    "fake_headers",
    "pytz",
    "alpaca_trade_api", # ~
    "twilio" # ~
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/speterlin/speterlin-stocks"
