[project]
name = "speterlin-stocks"
version = "1.0.9"
description = "A Python package for a suite of quant-trading opportunities in stocks with API integration: Alpaca brokerage for storing USD assets and margin trading (2x) on exchanges NYSE & NASDAQ, Financial Modeling Prep (FMP) & Google Trends & Yahoo Finance & Google Finance & ExchangeRate & MarketBeat & CrunchBase for data collection, OpenAI & Google Gemini-Pro for AI analysis."
authors = [
  { name = "Sebastian Peterlin", email = "speterlin@smartxchange.xyz" },
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "requests>=2.20",
    "numpy",
    "pandas>=2.0",
    "datetime",
    "yfinance==0.1.52",
    "beautifulsoup4", # bs4
    "pytrends",
    "openai", # ~
    "langchain-openai",
    "google-generativeai",
    "unidecode",
    "fake-headers",
    "pytz",
    "alpaca-trade-api", # ~  --no-dependencies
    "twilio" # ~
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/speterlin/speterlin-stocks"
