[project]
name = "speterlin-stocks"
version = "1.0.9.7"
description = "A Python package for a suite of quant-trading opportunities in stocks with API integration: Alpaca brokerage for storing USD assets and margin trading (2x) on exchanges NYSE & NASDAQ, Financial Modeling Prep (FMP) & Google Trends & Yahoo Finance & Google Finance & ExchangeRate & Slickcharts & CrunchBase for data collection, OpenAI & Google Gemini-Pro for AI analysis."
authors = [
  { name = "Sebastian Peterlin", email = "speterlin@smartxchange.xyz" },
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "requests>=2.20",
    "numpy",
    "pandas>=2.0",
    "datetime",
    "yfinance==0.1.52",
    "beautifulsoup4", # bs4
    "pytrends",
    "fake-headers",
    "unidecode",
    "pytz",
    "alpaca-trade-api", # ~  --no-dependencies
    "openai", # ~
    "langchain-openai",
    "google-generativeai",
    "twilio" # ~
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/speterlin/speterlin-stocks"
